# rs_osrm_serde

./: .gitmodules  Cargo.toml
src/general/rs_structs/: annotation.rs  coordinate.rs  intersections.rs  lanes.rs  maneuver.rs  meta_data.rs  route.rs  route_leg.rs  step.rs  waypoint.rs
src/route_api/: route_result.rs
src/table_api/: table_result.rs
