[package]
name = "rs_osrm"
version = "2.0.1"
license = "MIT"
authors = ["Ronny Karlsson <mafiapro@live.se>"]
edition = "2018"
description = "rust wrapper for osrm, folk from TehGoat/rs_osrm"
repository = "https://github.com/lichbt-rk/rs_osrm_serde"
keywords = ["osrm"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_osrm"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }

[build-dependencies]
cmake = "0.1"
